get data from url. add palindrome check. add prime check.

--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -42,7 +42,8 @@
                 android:layout_weight="0.6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="namanya"/>
+                android:text="namanya"
+                android:freezesText="true" />
         </LinearLayout>
 
         <LinearLayout
@@ -56,6 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/button_choose_event"
+                android:freezesText="true"
                 android:onClick="chooseEvent"/>
 
             <Button
@@ -63,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/button_choose_guest"
+                android:freezesText="true"
                 android:onClick="chooseGuest"/>
 
         </LinearLayout>
